--- a/api/build.gradle
+++ b/api/build.gradle
@@ -20,6 +20,11 @@ dependencies {
 	// MySQL Driver
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.24'
 
+	// Apache Commons dependencies for JDBC connection pooling & extras
+	implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
+	implementation group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'
+
+
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
