--- a/api/build.gradle
+++ b/api/build.gradle
@@ -24,6 +24,11 @@ dependencies {
 	implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.8.0'
 	implementation group: 'commons-dbutils', name: 'commons-dbutils', version: '1.7'
 
+	// Argon2 Hashing Dependency
+	implementation group: 'de.mkammerer', name: 'argon2-jvm', version: '2.10.1'
+
+
+	implementation group: 'org.json', name: 'json', version: '20201115'
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
