--- a/Saavari_Driver/app/src/main/AndroidManifest.xml
+++ b/Saavari_Driver/app/src/main/AndroidManifest.xml
@@ -1,13 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nabeel.saavari_driver">
+    package="com.savaari.savaari_driver">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".SavaariApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Saavari_Driver" />
+        android:theme="@style/AppTheme">
 
+<!--        <meta-data-->
+<!--            android:name="com.google.android.gms.version"-->
+<!--            android:value="@integer/google_play_services_version" />-->
+
+<!--        <meta-data-->
+<!--            android:name="com.google.android.geo.API_KEY"-->
+<!--            android:value="@string/google_maps_api_key" />-->
+
+<!--        <activity android:name="com.example.savaari_driver.ride.RideActivity" />-->
+
+<!--        <activity-->
+<!--            android:name="com.example.savaari_driver.settings.SettingsActivity"-->
+<!--            android:label="@string/title_activity_settings"-->
+<!--            android:parentActivityName="com.example.savaari_driver.ride.RideActivity"/>-->
+
+<!--        <activity android:name="com.example.savaari_driver.auth.login.LoginActivity" />-->
+<!--        <activity-->
+<!--            android:name="com.example.savaari_driver.auth.signup.SignUpActivity"-->
+<!--            android:parentActivityName="com.example.savaari_driver.auth.login.LoginActivity" />-->
+        <activity android:name="com.savaari.savaari_driver.MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+<!--        <activity android:name=".register.RegisterActivity">-->
+
+<!--        </activity>-->
+
+<!--        <service-->
+<!--            android:name="com.example.savaari_driver.services.location.LocationUpdateService"-->
+<!--            android:stopWithTask="true" />-->
+
+    </application>
 </manifest>
