Login Activity and ViewModel

--- a/Saavari_Driver/app/src/main/AndroidManifest.xml
+++ b/Saavari_Driver/app/src/main/AndroidManifest.xml
@@ -18,13 +18,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-<!--        <meta-data-->
-<!--            android:name="com.google.android.gms.version"-->
-<!--            android:value="@integer/google_play_services_version" />-->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
-<!--        <meta-data-->
-<!--            android:name="com.google.android.geo.API_KEY"-->
-<!--            android:value="@string/google_maps_api_key" />-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_api_key" />
 
 <!--        <activity android:name="com.example.savaari_driver.ride.RideActivity" />-->
 
@@ -33,7 +33,7 @@
 <!--            android:label="@string/title_activity_settings"-->
 <!--            android:parentActivityName="com.example.savaari_driver.ride.RideActivity"/>-->
 
-<!--        <activity android:name="com.example.savaari_driver.auth.login.LoginActivity" />-->
+        <activity android:name="com.savaari.savaari_driver.auth.login.LoginActivity" />
 <!--        <activity-->
 <!--            android:name="com.example.savaari_driver.auth.signup.SignUpActivity"-->
 <!--            android:parentActivityName="com.example.savaari_driver.auth.login.LoginActivity" />-->
