RideActivity UI and Layouts

--- a/Saavari_Driver/app/src/main/AndroidManifest.xml
+++ b/Saavari_Driver/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_api_key" />
 
-<!--        <activity android:name="com.example.savaari_driver.ride.RideActivity" />-->
+        <activity android:name="com.savaari.savaari_driver.ride.RideActivity" />
 
 <!--        <activity-->
 <!--            android:name="com.example.savaari_driver.settings.SettingsActivity"-->
