--- a/Savaari_Rider/app/src/main/AndroidManifest.xml
+++ b/Savaari_Rider/app/src/main/AndroidManifest.xml
@@ -3,18 +3,48 @@
     package="com.savaari.savaari_rider">
 
     <uses-permission android:name="android.permission.USE_BIOMETRIC" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
+        android:name = "com.savaari.savaari_rider.SavaariApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Savaari_Rider">
-        <activity android:name=".MainActivity"></activity>
+        android:theme="@style/AppTheme">
+
+    <meta-data
+        android:name="com.google.android.gms.version"
+        android:value="@integer/google_play_services_version" />
+
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="@string/google_maps_api_key" />
+
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".auth.login.LoginActivity" />
         <activity
             android:name=".auth.signup.SignUpActivity"
             android:parentActivityName=".auth.login.LoginActivity" />
+        <activity android:name=".ride.RideActivity" />
+
+        <service
+            android:name=".services.location.LocationUpdateService"
+            android:stopWithTask="true" />
     </application>
 
 </manifest>
