--- a/Savaari_Rider/app/build.gradle
+++ b/Savaari_Rider/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
 
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
@@ -48,7 +49,7 @@ dependencies {
     implementation 'org.slf4j:slf4j-simple:1.7.25'
 
     // Jackson dependencies
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.3'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
 }
