--- a/Savaari_Rider/app/build.gradle
+++ b/Savaari_Rider/app/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'com.android.application'
+    id 'kotlin-android'
+    id 'kotlin-android-extensions'
 }
 
 android {
@@ -25,6 +27,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    testOptions {
+        animationsDisabled = true
+    }
 }
 
 dependencies {
@@ -32,10 +38,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    testImplementation 'junit:junit:4.+'
+
+    // Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
 
     implementation "com.google.android.gms:play-services-location:18.0.0"
 
@@ -52,4 +68,6 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-core:2.11.4'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.4'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
