--- a/Saavari_Driver/app/build.gradle
+++ b/Saavari_Driver/app/build.gradle
@@ -29,14 +29,11 @@ android {
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.11.3'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.3'
@@ -44,12 +41,22 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:18.0.0"
     implementation "com.google.guava:guava:16+"
 
-    //Google Maps & Places API
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    // Google Maps & Places API
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
     implementation 'com.google.android.libraries.places:places:2.4.0'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
 
-    //Google Maps Services for Routing API
+    // Google Maps Services for Routing API
     implementation 'com.google.maps:google-maps-services:0.14.0'
     implementation 'org.slf4j:slf4j-simple:1.7.25'
+
+    // Testing
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.3.0')
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.0.2'){
+        exclude group: 'com.android.support', module: 'appcompat'
+        exclude module: 'recyclerview-v7'
+        exclude module: 'appcompat-v7'
+    }
 }
