--- a/Savaari_Rider/app/build.gradle
+++ b/Savaari_Rider/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.appcompat:appcompat:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     // Testing
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
